# eos21

./: .gitignore  CMakeLists.txt  LICENSE.md  README-CH.MD  README.md  _config.yml  blackHoleDeployer.js  config.json  config_ts.json  deploy_blackHole.js  deploy_erc20.js  deploy_whitehole.js  eos21.config  eos21.js  package-lock.json  package.json
CMakeModules/: FindEOSIOWasmsdk.cmake
blackHole/: package-lock.json  package.json
blackHole/contracts/: TestToken.sol
blackHole/test/: TestToken.test.js
blackhole/: CMakeLists.txt  truffle.js
blackhole/contracts/: BlackHole.sol  BlackHoleEosAccount.sol  BlackHoleEosPublicKey.sol  BlackHoleTimestamp.sol  ERC20Token.sol  (+3 more)
contracts/: BlackHole.sol  ERC20Token.sol  EosBlackHole.sol  EosValidator.sol
docs/: EOS21-CH.MD
eosio.token/: CMakeLists.txt
migrations/: 2_contracts_migration.js
oracle/: TeleportOracle.js
src/: warmHole.js
test/: BlackHole.test.js  BlackHole_ERC20Tocken.test.js  BlackHole_ElementTocken.test.js  BlackHole_SenseTocken.test.js  Deployer.js  ElementToken.test.js  EosBlackHole.test.js  EosBlackHole_WarmHole.test.js  EosBlackHole_WormHole.test.js  SenseToken.test.js  TestToken.test.js
utils/: BlackHoleDeployer.js  ERC20Deployer.js  WhiteHoleDeployer.js
warmhole/: WarmHole.js  package-lock.json  warmHole.js
whitehole/: CMakeLists.txt  eosio.token.cpp  whitehole.cpp  whitehole.hpp
whitehole/CMakeModules/: FindEOSIOCDT.cmake  FindEOSIOWasmsdk.cmake  FindEOSIO_CDT.cmake
whitehole/contracts/: CMakeLists.txt  whitehole.cpp  whitehole.hpp
whitehole/contracts/whitehole/: whitehole.hpp
whitehole/test/: whitehole.test.js
wormhole/: Check.js  WormHole.js  WormHoleEosAccount.js
(+16 files in other folders)
